--- a/notebooks/data_extraction.ipynb
+++ b/notebooks/data_extraction.ipynb
@@ -9,26 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
+    "%load_ext autoreload\n",
+    "\n",
+    "%autoreload 2\n",
+    "\n",
     "import configparser\n",
     "import os\n",
     "import time\n",
     "import random\n",
     "import pandas as pd\n",
     "import requests\n",
-    "import ast\n",
-    "import json\n",
     "import openpyxl\n",
-    "\n",
     "\n",
     "from io import StringIO\n",
     "from pathlib import Path\n",
-    "from bs4 import BeautifulSoup\n",
-    "from urllib.request import Request, urlopen"
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,28 +48,33 @@
        "['src/config.ini']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# some stuff I set up in a config file so I don't have to keep updating certain\n",
+    "# variables in every script\n",
     "config = configparser.ConfigParser()\n",
     "config.read('src/config.ini')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create output directory and sub-directories if doesnt exist\n",
+    "# the output path is specified in the config.ini file\n",
     "output = Path(config['paths']['output'])\n",
+    "# team stats data at time of running code will be placed here\n",
+    "# not sure if the data placed here will be very useful\n",
     "team_stats = Path(output/'team_stats')\n",
     "\n",
     "directories = [output, team_stats]\n",
     "\n",
+    "# create output directory and sub-directories if doesnt exist\n",
     "for directory in directories:\n",
     "    try:\n",
     "        assert directory.exists()\n",
@@ -80,16 +84,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# i will be web-scraping alot, so I made this function as a result\n",
+    "# I will be web-scraping alot, so I made this function as a result\n",
+    "\n",
     "def get_html_data(url, parser='html.parser'):\n",
+    "    '''\n",
+    "    Extract html data from specified url and return a bs4 object.\n",
+    "    Parser can be specified if needed. Default is html.parser.\n",
+    "    '''\n",
     "    response = requests.get(url)\n",
     "    html_content = response.text\n",
     "    soup = BeautifulSoup(html_content, parser)\n",
+    "    \n",
     "    return soup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I ended up using this a lot in the end\n",
+    "def get_table_data_from_html(soup)->list:\n",
+    "    '''\n",
+    "    Extract tables from bs4 object and return a list of dataframes.\n",
+    "    '''\n",
+    "    \n",
+    "    # get all tables in the html\n",
+    "    tables = soup.findAll('table')\n",
+    "\n",
+    "    # create dfs for each table and append each one to a list\n",
+    "    dfs_from_tables = []\n",
+    "    for table in tables:\n",
+    "        dfs_from_tables.append(pd.read_html(StringIO(str(table)))[0])\n",
+    "    \n",
+    "    return dfs_from_tables"
    ]
   },
   {
@@ -105,10 +138,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# website I am pulling the data from\n",
+    "# this url gives me a list of all players in the current league\n",
     "base_url = 'https://fbref.com/en/comps/22/Major-League-Soccer-Stats'\n",
     "\n",
     "# this page gives me a bunch of tables for team stats in the current moment\n",
+    "# not sure how much of the data here will be useful, but I'll grab it just-in-case\n",
     "html = get_html_data(base_url + 'players/')"
    ]
   },
@@ -118,13 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get all tables in the html\n",
-    "tables = html.findAll('table')\n",
-    "\n",
-    "# create dfs for each table and append each one to a list\n",
-    "table_dfs = []\n",
-    "for table in tables:\n",
-    "    table_dfs.append(pd.read_html(StringIO(str(table)))[0])"
+    "team_stat_dfs = get_table_data_from_html(html)"
    ]
   },
   {
@@ -153,7 +181,7 @@
     "\n",
     "# create csv files for each table\n",
     "for index, pair in enumerate(pairs):\n",
-    "    pair_df = pd.concat([table_dfs[pair[0]], table_dfs[pair[1]]],axis=1)\n",
+    "    pair_df = pd.concat([team_stat_dfs[pair[0]], team_stat_dfs[pair[1]]],axis=1)\n",
     "    pair_df.to_csv(team_stats/f'{tables[index]}.csv')"
    ]
   },
@@ -172,8 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_players = pd.read_excel(config['paths']['all_player_xlsx'])\n",
-    "wb = openpyxl.load_workbook(config['paths']['all_player_xlsx'])\n",
+    "all_players = pd.read_excel(config['paths']['all_players'])\n",
+    "wb = openpyxl.load_workbook(config['paths']['all_players'])\n",
     "sheets = wb.sheetnames\n",
     "ws = wb[sheets[0]]\n",
     "\n",
