Ran 2022 and cleaned up notebook

--- a/notebooks/data_extraction.ipynb
+++ b/notebooks/data_extraction.ipynb
@@ -158,13 +158,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_all_player_match_data(excel_file_path, player_links==None) -> tuple[pd.DataFrame, list]:\n",
+    "def get_all_player_match_data(excel_file_path) -> tuple[pd.DataFrame, list]:\n",
+    "    '''\n",
+    "    Input an excel file of the copied tables from the websites and return a tuple\n",
+    "    where the first element is a dataframe of all player data and the second element\n",
+    "    is a list of URLs where extraction failed. This attempts to extract data from\n",
+    "    the failed URLs once more before completing.\n",
+    "    '''\n",
     "    # get year from directory the excel file is in\n",
     "    year = os.path.dirname(excel_file_path).split('\\\\')[-1].replace('mls_', '')\n",
     "    # extract all links from the excel file\n",
     "    # returned as a df in case of future use with an idea I had\n",
-    "    if player_links==None:\n",
-    "        player_links = get_all_player_match_data_links(excel_file_path, year)\n",
+    "    player_links = get_all_player_match_data_links(excel_file_path, year)\n",
     "    # initialize empty df for all player data\n",
     "    player_data_df = pd.DataFrame()\n",
     "    \n",
@@ -178,7 +183,11 @@
     "\n",
     "    return player_data_df, failed_links \n",
     "\n",
-    "def generate_player_df(player_links, df) -> tuple[pd.DataFrame, list]:\n",
+    "def generate_player_df(player_links, df=pd.DataFrame()) -> tuple[pd.DataFrame, list]:\n",
+    "    '''\n",
+    "    Given an iterable of individual player links (and a df to modify), return a tuple (DataFrame, list)\n",
+    "    where the dataframe contains all player data and the list contains URLs with failed extractions.\n",
+    "    '''\n",
     "    # get total number of players for alive_bar\n",
     "    total_players = len(player_links)\n",
     "    # to append failed links to a list\n",
@@ -204,6 +213,10 @@
     "    return df, failed_links\n",
     "\n",
     "def attempt_data_extraction(url) -> pd.DataFrame | None:\n",
+    "    '''\n",
+    "    Attempt to get a player data dataframe. Return the df if successful,\n",
+    "    otherwise return None.\n",
+    "    '''\n",
     "    # try to get a player_df and return it\n",
     "    try:\n",
     "        player_df = get_player_data_df(url)\n",
@@ -211,9 +224,13 @@
     "    # otherwise, let the user know and return nothing\n",
     "    except:\n",
     "        print(f\"Could not get player data for {url}\")\n",
-    "        return\n",
+    "        return None\n",
     "\n",
     "def get_all_player_match_data_links(excel_file_path, year) -> pd.DataFrame:\n",
+    "    '''\n",
+    "    Extract all links from the excel that is a copy of the website data. Return\n",
+    "    a dataframe of the player names and URLs.\n",
+    "    '''\n",
     "    # read excel file\n",
     "    all_players = pd.read_excel(excel_file_path)\n",
     "    wb = openpyxl.load_workbook(excel_file_path)\n",
@@ -224,13 +241,17 @@
     "    # this may need to be adjusted depending on how the data comes out\n",
     "    all_players['stat_link'] = [ws.cell(row=i+2, column=37).hyperlink.target for i in range(all_players.shape[0])]\n",
     "    # save all links out\n",
-    "    all_players[['Player', 'stat_link']].to_csv(output/f'mls_{year}' / 'player_links.csv')\n",
+    "    all_players[['Player', 'stat_link']].to_csv(output/f'mls_{year}' / 'player_links.csv', index=False)\n",
     "    \n",
     "    # return df of just the player name and stat link\n",
     "    return all_players[['Player', 'stat_link']]\n",
     "    \n",
     "    \n",
     "def get_player_data_df(url) -> pd.DataFrame:\n",
+    "    '''\n",
+    "    Using the URL for the individual player, get the first table on the website\n",
+    "    and return it as a dataframe.\n",
+    "    '''\n",
     "    # get html data from url\n",
     "    player_data_html = get_html_data(url)\n",
     "    # generate tables list\n",
@@ -299,7 +320,7 @@
     "# create csv files for each table\n",
     "for index, pair in enumerate(pairs):\n",
     "    pair_df = pd.concat([team_stat_dfs[pair[0]], team_stat_dfs[pair[1]]],axis=1)\n",
-    "    pair_df.to_csv(team_stats/f'{tables[index]}.csv')"
+    "    pair_df.to_csv(team_stats/f'{tables[index]}.csv',index=False)"
    ]
   },
   {
@@ -318,6 +339,15 @@
    "outputs": [],
    "source": [
     "player_data_2022_df, failed_links_2024 = get_all_player_match_data(config['paths']['all_players_2023'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_data_2024_df.to_csv(output/\"mls_2024\"/\"all_player_data_2024.csv\")"
    ]
   },
   {
@@ -350,15 +380,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_data_2023_df.to_csv(output/\"mls_2023\"/\"all_player_data_2023.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2022 SEASON"
+    "# 2022 Season"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -366,12 +405,22 @@
      "output_type": "stream",
      "text": [
       "on 129: Could not get player data for https://fbref.com/en/players/1a160ea3/matchlogs/2022/summary/Geoff-Cameron-Match-Logs\n",
-      "|███████████████▊                        | ▅▃▁ 308/784 [39%] in 41:33 (~1:04:11,"
+      "|████████████████████████████████████████| 784/784 [100%] in 1:43:27.9 (0.13/s) \n",
+      "|████████████████████████████████████████| 1/1 [100%] in 7.8s (0.13/s)          \n"
      ]
     }
    ],
    "source": [
     "player_data_2022_df, failed_links_2022 = get_all_player_match_data(config['paths']['all_players_2022'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_data_2022_df.to_csv(output/\"mls_2022\"/\"all_player_data_2022.csv\")"
    ]
   },
   {
@@ -428,7 +477,7 @@
     "        games_during_date = game_data_filtered['game_key'].value_counts().keys()\n",
     "        for game in games_during_date:\n",
     "            individual_game = game_data_filtered[game_data_filtered['game_key']==game]\n",
-    "            individual_game.to_csv(output/'games'/f\"{game_date}\"/f\"{game}.csv\")\n",
+    "            individual_game.to_csv(output/'games'/f\"{game_date}\"/f\"{game}.csv\", index=False)\n",
     "            games_so_far.append(game)\n",
     "    except:\n",
     "        pass"
